(v1.1) Force icons to 128x128 with text located above and forced to one line

--- a/FixedIconSizeAndRepositionText.css
+++ b/FixedIconSizeAndRepositionText.css
@@ -21,11 +21,13 @@ canvas {
 	overflow: hidden !important;
 	object-fit: cover;
 	height: 128px !important;
-	margin-bottom: 32px !important;
+	margin-bottom: 0px !important;
+	margin-top: 32px !important;
 }
 
 /* Text style */
 .z-30 { 
+	display: block;
 	color: inherit; /* Specify a colour, or leave as inherit if you intend to use RecolourTextOnSpeech.css */
 	font-family: ***WHATEVER*** !important;
 	font-stretch: ***WHATEVER*** !important;
